# HandModel

./: CMakeLists.txt  README.md
builds/: CMakeCache.txt  Makefile  Project  cmake_install.cmake
builds/libraries/BaseHand/: Makefile  cmake_install.cmake
builds/libraries/Graphics/: Makefile  cmake_install.cmake
builds/libraries/Model/: Makefile  cmake_install.cmake
libraries/BaseHand/: CMakeLists.txt
libraries/BaseHand/includes/: BaseHand.h
libraries/BaseHand/src/: BaseHand.cpp
libraries/Graphics/: CMakeLists.txt
libraries/Graphics/includes/: Graphics.h  Graphics_old.h
libraries/Graphics/src/: Graphics.cpp  Graphics_old.cpp
libraries/Model/: CMakeLists.txt
libraries/Model/includes/: Model.h
libraries/Model/src/: Model.cpp
libraries/MyLibrary/: CMakeLists.txt
libraries/MyLibrary/includes/: MyLibrary.h
libraries/MyLibrary/src/: MyLibrary.cpp
src/: main.cpp
